force-app/main/default/objects/Delinquency_Tracker__c/Delinquency_Tracker__c.object-meta.xml
<CustomObject>
    <label>Daily Delinquency Tracker</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Delinquency Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Delinquency Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>