force-app/main/default/objects/Delinquency_Tracker__c/fields/Chargeoff_Aging_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Aging_Amount__c</fullName>
    <description>Chargeoff Aging Amount</description>
    <inlineHelpText>Chargeoff Aging Amount</inlineHelpText>
    <label>Chargeoff Aging Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>