force-app/main/default/objects/Delinquency_Tracker__c/fields/Chargeoff_Fraud_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Fraud_Amount__c</fullName>
    <label>Chargeoff Fraud Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>