force-app/main/default/objects/Delinquency_Tracker__c/fields/Current_Amount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount_Pct__c</fullName>
    <description>Current Amount %</description>
    <formula>Current_Amount__c  / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Amount %</inlineHelpText>
    <label>Current Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>