force-app/main/default/objects/Delinquency_Tracker__c/fields/Current_Avg_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Avg_Balance__c</fullName>
    <description>Current Avg Balance</description>
    <formula>IF(No_of_Current_Accounts__c == 0, 0, Current_Amount__c / No_of_Current_Accounts__c)</formula>
    <inlineHelpText>Current Avg Balance</inlineHelpText>
    <label>Current Avg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>