force-app/main/default/objects/Delinquency_Tracker__c/fields/Current_Future_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Future_PTP_Amount__c</fullName>
    <description>Current PTP Amount</description>
    <inlineHelpText>Current PTP Amount</inlineHelpText>
    <label>Current Future PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>