force-app/main/default/objects/Delinquency_Tracker__c/fields/Current_Missed_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Missed_PTP_Amount__c</fullName>
    <label>Current Missed PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>