force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_1_Amount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cycle_1_Amount_Pct__c</fullName>
    <description>Cycle 1 Amount %</description>
    <formula>Cycle_1_Amount__c  / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cycle 1 Amount %</inlineHelpText>
    <label>Cycle 1 Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>