force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_1_Missed_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cycle_1_Missed_PTP_Amount__c</fullName>
    <label>Cycle 1 Missed PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>