force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_2_Avg_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cycle_2_Avg_Balance__c</fullName>
    <description>Cycle 2 Avg Balance</description>
    <formula>IF(No_of_Cycle_2_Accounts__c == 0, 0, Cycle_2_Amount__c / No_of_Cycle_2_Accounts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cycle 2 Avg Balance</inlineHelpText>
    <label>Cycle 2 Avg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>