force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_2_Future_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cycle_2_Future_PTP_Amount__c</fullName>
    <description>Cycle 2 PTP Amount</description>
    <inlineHelpText>Cycle 2 PTP Amount</inlineHelpText>
    <label>Cycle 2 Future PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>