force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_2_Missed_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cycle_2_Missed_PTP_Amount__c</fullName>
    <label>Cycle 2 Missed PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>