force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cycle_3_Amount__c</fullName>
    <label>Cycle 3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>