force-app/main/default/objects/Delinquency_Tracker__c/fields/Cycle_3_Future_PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cycle_3_Future_PTP_Amount__c</fullName>
    <description>Cycle 3 PTP Amount</description>
    <inlineHelpText>Cycle 3 PTP Amount</inlineHelpText>
    <label>Cycle 3 Future PTP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>