force-app/main/default/objects/Delinquency_Tracker__c/fields/Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Delinquency__c</fullName>
    <description>Delinquency Percentage</description>
    <formula>Cycle_2_Amount_Pct__c + 
Cycle_3_Amount_Pct__c + 
Cycle_4_Amount_Pct__c + 
Cycle_5_Amount_Pct__c + 
Cycle_6_Amount_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delinquency Percentage</inlineHelpText>
    <label>Delinquency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>