force-app/main/default/objects/Delinquency_Tracker__c/fields/Delinquency_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Accounts__c</fullName>
    <description>Delinquency Accounts #</description>
    <formula>No_of_Cycle_2_Accounts__c + 
No_of_Cycle_3_Accounts__c + 
No_of_Cycle_4_Accounts__c + 
No_of_Cycle_5_Accounts__c + 
No_of_Cycle_6_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delinquency Accounts #</inlineHelpText>
    <label>Delinquency Accounts #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>