force-app/main/default/objects/Delinquency_Tracker__c/fields/Delinquency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Amount__c</fullName>
    <description>Delinquency Amount</description>
    <formula>Cycle_2_Amount__c + 
Cycle_3_Amount__c + 
Cycle_4_Amount__c + 
Cycle_5_Amount__c + 
Cycle_6_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delinquency Amount</inlineHelpText>
    <label>Delinquency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>