force-app/main/default/objects/Delinquency_Tracker__c/fields/Iteration_Number__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Number__c</fullName>
    <description>Iteration Number  (for back-end processing)</description>
    <inlineHelpText>Iteration Number  (for back-end processing)</inlineHelpText>
    <label>Iteration Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>