force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Chargeoff_Aging_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Chargeoff_Aging_Accounts__c</fullName>
    <description># of Chargeoff Aging Accounts</description>
    <inlineHelpText># of Chargeoff Aging Accounts</inlineHelpText>
    <label># of Chargeoff Aging Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>