force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Current_Accounts_Pct__c.field-meta.xml
<CustomField>
    <fullName>No_of_Current_Accounts_Pct__c</fullName>
    <description># of Current Accounts %</description>
    <formula>No_of_Current_Accounts__c  / Total_No_Of_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of Current Accounts %</inlineHelpText>
    <label># of Current Accounts %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>