force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Current_Future_PTP_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Current_Future_PTP_Accounts__c</fullName>
    <description># of Current PTP Accounts</description>
    <inlineHelpText># of Current PTP Accounts</inlineHelpText>
    <label># of Current Future PTP Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>