force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Current_Missed_PTP_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Current_Missed_PTP_Accounts__c</fullName>
    <label># of Current Missed PTP Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>