force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Cycle_2_Future_PTP_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cycle_2_Future_PTP_Accounts__c</fullName>
    <description># of Cycle 2 PTP Accounts</description>
    <inlineHelpText># of Cycle 2 PTP Accounts</inlineHelpText>
    <label># of Cycle 2 Future PTP Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>