force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Times_Contacted_Current__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_Contacted_Current__c</fullName>
    <description># of Times Contacted Current</description>
    <inlineHelpText># of Times Contacted Current</inlineHelpText>
    <label># of Times Contacted Current</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>