force-app/main/default/objects/Delinquency_Tracker__c/fields/No_of_Times_Contacted_Cycle_3__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_Contacted_Cycle_3__c</fullName>
    <description># of Times Contacted Cycle 3</description>
    <inlineHelpText># of Times Contacted Cycle 3</inlineHelpText>
    <label># of Times Contacted Cycle 3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>