force-app/main/default/objects/Delinquency_Tracker__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>Name of the Portfolio</description>
    <inlineHelpText>Name of the Portfolio</inlineHelpText>
    <label>Name of Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFS Credit Card Portfolio</fullName>
            </value>
            <value>
                <fullName>AFS Loan Portfolio</fullName>
            </value>
            <value>
                <fullName>WGS Loan Portfolio</fullName>
            </value>
            <value>
                <fullName>Wells1 Portfolio</fullName>
            </value>
            <value>
                <fullName>Wells2 Portfolio</fullName>
            </value>
            <value>
                <fullName>Wells3 Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>