force-app/main/default/objects/Delinquency_Tracker__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>Report Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Report Date</inlineHelpText>
    <label>Report Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>