force-app/main/default/objects/Delinquency_Tracker__c/fields/Roll_Rate_0_1__c.field-meta.xml
<CustomField>
    <fullName>Roll_Rate_0_1__c</fullName>
    <description>Roll Rate 0-1</description>
    <inlineHelpText>Roll Rate 0-1</inlineHelpText>
    <label>Roll Rate 0-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>