force-app/main/default/objects/Delinquency_Tracker__c/fields/Roll_Rate_1_2__c.field-meta.xml
<CustomField>
    <fullName>Roll_Rate_1_2__c</fullName>
    <description>Roll Rate 1-2</description>
    <inlineHelpText>Roll Rate 1-2</inlineHelpText>
    <label>Roll Rate 1-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>