force-app/main/default/objects/Delinquency_Tracker__c/fields/Roll_Rate_2_3__c.field-meta.xml
<CustomField>
    <fullName>Roll_Rate_2_3__c</fullName>
    <description>Roll Rate 2-3</description>
    <inlineHelpText>Roll Rate 2-3</inlineHelpText>
    <label>Roll Rate 2-3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>