force-app/main/default/objects/Delinquency_Tracker__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The date on which the data is collected</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date on which the data is collected</inlineHelpText>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>