force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Avg_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Avg_Balance__c</fullName>
    <description>Total Avg Balance</description>
    <formula>Total_Amount__c / Total_No_Of_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Avg Balance</inlineHelpText>
    <label>Total Avg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>