force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Chargeoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Chargeoff_Amount__c</fullName>
    <description>Total Chargeoff  Amount</description>
    <formula>Chargeoff_Amount__c + 
Chargeoff_Bank_Amount__c + 
Chargeoff_Dec_Amount__c + 
Chargeoff_Fraud_Amount__c + 
Chargeoff_Aging_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Chargeoff  Amount</inlineHelpText>
    <label>Total Chargeoff  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>