force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Chargeoff_Amount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Chargeoff_Amount_Pct__c</fullName>
    <description>Total Chargeoff Amount %</description>
    <formula>Total_Chargeoff_Amount__c  / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Chargeoff Amount %</inlineHelpText>
    <label>Total Chargeoff Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>