force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Chargeoff_Avg_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Chargeoff_Avg_Balance__c</fullName>
    <description>Total Chargeoff Avg Balance</description>
    <formula>IF(Total_Chargeoff_Amount__c == 0, 0, Total_Chargeoff_Amount__c / Total_No_Of_Chargeoff_Accounts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Chargeoff Avg Balance</inlineHelpText>
    <label>Total Chargeoff Avg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>