force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Delinquent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Delinquent_Amount__c</fullName>
    <description>Total Delinquent Amount</description>
    <formula>Cycle_1_Amount__c +
Cycle_2_Amount__c +
Cycle_3_Amount__c +
Cycle_4_Amount__c +
Cycle_5_Amount__c +
Cycle_6_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Delinquent Amount</inlineHelpText>
    <label>Total Delinquent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>