force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Delinquent_Amount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Delinquent_Amount_Pct__c</fullName>
    <description>Total Delinquent Amount %</description>
    <formula>Total_Delinquent_Amount__c  / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Delinquent Amount %</inlineHelpText>
    <label>Total Delinquent Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>