force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_Delinquent_Avg_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Delinquent_Avg_Balance__c</fullName>
    <description>Total Delinquent Avg Balance</description>
    <formula>Total_Delinquent_Amount__c / Total_No_Of_Delinquent_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Delinquent Avg Balance</inlineHelpText>
    <label>Total Delinquent Avg Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>