force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_No_Of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Accounts__c</fullName>
    <description>Total # Of Accounts</description>
    <formula>No_of_Current_Accounts__c +
Total_No_Of_Delinquent_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total # Of Accounts</inlineHelpText>
    <label>Total # Of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>