force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_No_Of_Chargeoff_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Chargeoff_Accounts__c</fullName>
    <description>Total # Of Chargeoff Accounts</description>
    <formula>No_of_Chargeoff_Accounts__c + 
No_of_Chargeoff_Bank_Accounts__c + 
No_of_Chargeoff_Dec_Accounts__c	+ 
No_of_Chargeoff_Fraud_Accounts__c + 
No_of_Chargeoff_Aging_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total # Of Chargeoff Accounts</inlineHelpText>
    <label>Total # Of Chargeoff Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>