force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_No_Of_Chargeoff_Accounts_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Chargeoff_Accounts_Pct__c</fullName>
    <description>Total # Of Chargeoff Accounts %</description>
    <formula>Total_No_Of_Chargeoff_Accounts__c  / Total_No_Of_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total # Of Chargeoff Accounts %</inlineHelpText>
    <label>Total # Of Chargeoff Accounts %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>