force-app/main/default/objects/Delinquency_Tracker__c/fields/Total_No_Of_Delinquent_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Delinquent_Accounts__c</fullName>
    <description>Total # Of Delinquent Accounts</description>
    <formula>No_of_Cycle_1_Accounts__c +
No_of_Cycle_2_Accounts__c +
No_of_Cycle_3_Accounts__c +
No_of_Cycle_4_Accounts__c +
No_of_Cycle_5_Accounts__c +
No_of_Cycle_6_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total # Of Delinquent Accounts</inlineHelpText>
    <label>Total # Of Delinquent Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>