force-app/main/default/objects/Delinquency_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Delinquency__c</columns>
    <columns>Delinquency_Amount__c</columns>
    <columns>Total_No_Of_Accounts__c</columns>
    <columns>No_of_Current_Accounts__c</columns>
    <columns>Total_No_Of_Delinquent_Accounts__c</columns>
    <columns>Total_No_Of_Chargeoff_Accounts__c</columns>
    <columns>Iteration_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>